# BrowserGPT

./: .gitignore  Dockerfile  agent.py  agentV2.py  agent_v3.py  app.py  browserplugin.py  browsertools.py  config.py  elements.txt  filestructure.py  label.txt  logs.py  main.ipynb  main.py  prompt.py  pyproject.toml  render.yaml  requirements.txt  supervisord.conf  test.py  test_agent.py  test_agentV2.py  utils.py  vercel.json
api/: index.py
frontend/: index.html
src/routers/: agent_router.py
src/success_prev_run/: Search_for_langchain.com_and_click_the_first_resul.txt
src/workflow/: agent.py  agent_state.py  browserplugin.py  browsertools.py  llm.py  nodes.py  prompt.py  router_app.py  structured.py
workflow/: agent.py  browsertools.py  llm.py  nodes.py
