[project]
name = "browsergpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "cloudpickle>=3.1.2",
    "dill>=0.4.1",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.7",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "playwright>=1.58.0",
    "pydantic>=2.13.2",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.44.0",
]
[tool.vercel]
entrypoint = "api/index.py"
